[package]
name = "crypto-santa"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curv-kzen = "0.9.0"
elgamal = { git = "https://github.com/arturomf94/rust-elgamal", branch = "feat/add-rerandomisation" }
